@@ -1,3 +1,8 @@
+2008-06-11  Dan Williams  <dcbw@redhat.com>
+
+	Fix up for addition of GError argument to nm_connection_verify() and
+	nm_setting_verify().
+
 2008-06-10  Dan Williams  <dcbw@redhat.com>
 
 	Fix up for symbol renames for ethernet and wifi devices in libnm-glib
